4th week is over

--- a/c++/1_white_belt/1_week/CMakeLists.txt
+++ b/c++/1_white_belt/1_week/CMakeLists.txt
@@ -1,6 +1,4 @@
-project(1_week)
-
-set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${WEEK_PREFIX}/${PROJECT_NAME}")
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${WEEK_PREFIX}/${1_week}")
 add_subdirectory(a_plus_b)
 add_subdirectory(bin_numbers)
 add_subdirectory(calculation_of_price)
