--- a/c++/1_white_belt/2_week/CMakeLists.txt
+++ b/c++/1_white_belt/2_week/CMakeLists.txt
@@ -1,5 +1,3 @@
-project(2_week)
-
-set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${WEEK_PREFIX}/${PROJECT_NAME}")
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${WEEK_PREFIX}/${2_week}")
 
 add_subdirectory(queue)
