--- a/c++/1_white_belt/3_week/CMakeLists.txt
+++ b/c++/1_white_belt/3_week/CMakeLists.txt
@@ -1,3 +1,1 @@
-project(3_week)
-
-set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${WEEK_PREFIX}/${PROJECT_NAME}")
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${WEEK_PREFIX}/${3_week}")
