--- a/c++/3_red_belt/CMakeLists.txt
+++ b/c++/3_red_belt/CMakeLists.txt
@@ -1,12 +1,11 @@
 project(red_belt)
 
 include_directories(headers)
+set(WEEK_PREFIX "${PREFIX}.${CONFIGURATION}/${PROJECT_NAME}")
 
-add_subdirectory(1_week)
-add_subdirectory(2_week)
-add_subdirectory(3_week)
+# add_subdirectory(1_week)
+# add_subdirectory(2_week)
+# add_subdirectory(3_week)
 add_subdirectory(4_week)
-#add_subdirectory(5_week)
+add_subdirectory(5_week)
 #add_subdirectory(6_week)
-
-set_property(TARGET ${PROJECT_NAME} PROPERTY FOLDER "${PROJECT_NAME}")
