--- a/c++/CMakeLists.txt
+++ b/c++/CMakeLists.txt
@@ -33,6 +33,6 @@ set(CMAKE_CXX_STANDARD 17)
 
 add_subdirectory(1_white_belt)
 add_subdirectory(2_yellow_belt)
-#add_subdirectory(3_red_belt)
+add_subdirectory(3_red_belt)
 #add_subdirectory(4_brown_belt)
 #add_subdirectory(5_black_belt)
