--- a/c++/3_red_belt/5_week/CMakeLists.txt
+++ b/c++/3_red_belt/5_week/CMakeLists.txt
@@ -5,3 +5,5 @@ add_subdirectory(split_into_sentences)
 add_subdirectory(simple_vector_2)
 add_subdirectory(merge_sort_3)
 add_subdirectory(priority_collection_2)
+add_subdirectory(matrix_sum)
+add_subdirectory(explore_key_words)
