--- a/c++/3_red_belt/CMakeLists.txt
+++ b/c++/3_red_belt/CMakeLists.txt
@@ -8,4 +8,4 @@ set(WEEK_PREFIX "${PREFIX}.${CONFIGURATION}/${PROJECT_NAME}")
 # add_subdirectory(3_week)
 add_subdirectory(4_week)
 add_subdirectory(5_week)
-#add_subdirectory(6_week)
+add_subdirectory(6_week)
