--- a/c++/3_red_belt/5_week/CMakeLists.txt
+++ b/c++/3_red_belt/5_week/CMakeLists.txt
@@ -7,3 +7,5 @@ add_subdirectory(merge_sort_3)
 add_subdirectory(priority_collection_2)
 add_subdirectory(matrix_sum)
 add_subdirectory(explore_key_words)
+add_subdirectory(syncronized)
+add_subdirectory(concurrent_map)
