--- a/c++/4_brown_belt/CMakeLists.txt
+++ b/c++/4_brown_belt/CMakeLists.txt
@@ -4,3 +4,4 @@ include_directories(headers)
 set(WEEK_PREFIX "${PREFIX}.${CONFIGURATION}/${PROJECT_NAME}")
 
 add_subdirectory(1_week)
+add_subdirectory(2_week)
