--- a/c++/3_red_belt/6_week/CMakeLists.txt
+++ b/c++/3_red_belt/6_week/CMakeLists.txt
@@ -1,5 +1,5 @@
-set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${WEEK_PREFIX}/${6_week}")
 add_executable(searcher
         main.cpp
         parse.cpp
         search_server.cpp)
+target_link_libraries(searcher PRIVATE tests)
