--- a/c++/4_brown_belt/2_week/code_restructurization/CMakeLists.txt
+++ b/c++/4_brown_belt/2_week/code_restructurization/CMakeLists.txt
@@ -2,3 +2,4 @@ add_executable(restructurization
         main.cpp
         stats_aggregator.cpp
         stats_aggregator_test.cpp)
+target_link_libraries(restructurization PRIVATE tests)
