--- a/c++/4_brown_belt/2_week/double_dispatching/CMakeLists.txt
+++ b/c++/4_brown_belt/2_week/double_dispatching/CMakeLists.txt
@@ -1,3 +1,5 @@
 add_executable(double_dispatching
         collide.cpp
         geo2d.cpp)
+
+target_link_libraries(double_dispatching PRIVATE tests)
