--- a/c++/4_brown_belt/2_week/refactoring/CMakeLists.txt
+++ b/c++/4_brown_belt/2_week/refactoring/CMakeLists.txt
@@ -2,3 +2,5 @@ add_executable(refactoring
         refactoring.cpp
         xml.cpp
         json.cpp)
+
+target_link_libraries(refactoring PRIVATE tests)
