--- a/c++/1_white_belt/CMakeLists.txt
+++ b/c++/1_white_belt/CMakeLists.txt
@@ -1,5 +1,6 @@
+project(white_belt)
 add_subdirectory(1_week)
 add_subdirectory(2_week)
 add_subdirectory(3_week)
-#add_subdirectory(4_week)
-#add_subdirectory(5_week)
+add_subdirectory(4_week)
+add_subdirectory(5_week)
