--- a/c++/3_red_belt/5_week/simple_vector/CMakeLists.txt
+++ b/c++/3_red_belt/5_week/simple_vector/CMakeLists.txt
@@ -1,2 +1,2 @@
-add_executable(simple_vector simple_vector_copy_assignment.cpp)
-target_link_libraries(simple_vector PRIVATE tests)
+add_executable(simple_vector1 simple_vector_copy_assignment.cpp)
+target_link_libraries(simple_vector1 PRIVATE tests)
