--- a/c++/3_red_belt/CMakeLists.txt
+++ b/c++/3_red_belt/CMakeLists.txt
@@ -1,6 +1,6 @@
-# add_subdirectory(1_week)
-# add_subdirectory(2_week)
-# add_subdirectory(3_week)
+add_subdirectory(1_week)
+add_subdirectory(2_week)
+add_subdirectory(3_week)
 add_subdirectory(4_week)
 add_subdirectory(5_week)
 add_subdirectory(6_week)
